syntax = "proto3";

package auth.password.api;

import "auth/auth_ticket/z_protobuf/api.proto";

message AuthenticatePasswordPb {
    string login_id = 1;
    string password = 2;
}

message AuthenticatePasswordResultPb {
    bool success = 1;
    auth.auth_ticket.api.AuthenticateResponsePb value = 2;
    AuthenticatePasswordErrorPb err = 3;
}
message AuthenticatePasswordErrorPb {
    AuthenticatePasswordErrorKindPb kind = 1;
}
enum AuthenticatePasswordErrorKindPb {
    INVALID_PASSWORD = 0;
}
